--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,8 +5,92 @@
 </head>
 <body>
     <div id="content">
-        <h1>Welcome to login page</h1>
-        <p>Lorem ipsum dolor sit amet.</p>
+
+        <div class="grid grid-cols-12">
+
+            <div class="md:col-span-2 lg:col-span-3 xl:col-span-4"> </div>
+
+            <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
+                
+                <div class="block p-6 border-t-8 border-red-700 bg-white rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+
+                    <!-- Alert Message Here -->
+                    <div data-th-replace="~{message::messagebox}"></div>
+
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                        Login Here
+                    </h5>
+
+                    <p class="font-normal mb-2 text-gray-700 dark:text-gray-400">
+
+                        Start Managing Contacts on Cloud.....
+                    </p>
+
+                    <div th:if="${param.error}"
+                    class="text-red-500 text-center mb-2">
+                        Invalid username and password.
+                    </div>
+
+                    <div th:if="${param.logout}"
+                    class="text-green-500 text-center mb-2">
+                        You have been logged out.
+                    </div>
+
+                    <!-- Form -->
+                    <form
+                    class="max-w-sm mx-auto"
+                    data-th-action="@{'/authenticate'}"
+                    method="post"
+                    novalidate>
+
+                        <!-- Username -->
+                        <div class="mb-2">
+                            <label
+                            for="email"
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                                Email
+                            </label>
+                            <input
+                            name="email"
+                            type="email"
+                            id="email"
+                            class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" placeholder="Enter your E-mail here" required />
+
+                        </div>
+
+                        <!-- Password -->
+                        <div class="mb-2">
+                            <label
+                            for="password"
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                                Password
+                            </label>
+                            <input
+                            name="password"
+                            type="password"
+                            id="password"
+                            class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+
+
+                        </div>
+
+                        <div class="flex justify-center space-x-3">
+
+                            <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                                Login
+                            </button>
+
+                            <button type="reset" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                                Reset
+                            </button>
+
+                        </div>
+                        
+                    </form>
+                </div>
+            </div>
+        </div>
+        
     </div>
     <script>
         console.log("Login page")
