--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -17,27 +17,25 @@
 <body class="dark:bg-gray-900 dark:text-white bg-gray-300">
     <!-- Common Header -->
     <div data-th-unless="${loggedInUser}">
-
         <div th:replace="~{navbar::navbar}"></div>
-
     </div>
 
     <div data-th-if="${loggedInUser}">
 
-        <div data-th-replace="~{user/user_navbar::user-navbar}"></div>
+        <div data-th-replace="~{user/side_nav::nav}"></div>
 
     </div>
 
-    <!-- Side Bar if user is loggged in-->
+    <!-- Side Bar if user is loggged in -->
 
-    <div data-th-if="${loggedInUser}">
+    <!-- <div data-th-if="${loggedInUser}">
 
         <div data-th-replace="~{user/sidebar::sidebar}"></div>
 
-    </div>
+    </div> -->
 
     <!-- Main Content -->
-    <div class="p-4">
+    <div class="p-4 pt-20">
         <section th:replace="${content}"></section>
     </div>
     <!-- Common Footer -->
