--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -10,7 +10,7 @@
         <!-- End of brand logo -->
         <div class="flex gap-2 md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
             <!-- Dark Light Theme Button -->
-            <button id="theme_change_button"
+            <button data-th-fragment="theme_button" id="theme_change_button"
                 class="bg-gray-200 px-3 py-2 rounded-lg dark:text-black dark:bg-gray-600">
                 <i class="fa-solid fa-circle-half-stroke">
                 </i> <span>Light</span>
