--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -5,8 +5,15 @@
 </head>
 <body>
     <div id="content">
-        <h1>Welcome to profile page</h1>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <div data-th-if="${loggedInUser}">
+            <div data-th-replace="~{user/side_nav::nav}"></div>
+            <div data-th-replace="~{user/side_nav::side}"></div>
+        </div>
+        <div class="pt-16 pl-64">
+            <h1>Welcome to profile page</h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <img data-th-src="@{'/Images/github.svg'}"/>
+        </div>
     </div>
     <script>
         console.log("Profile page")
